# ImageCaster

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/videotest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/videotest/: CastOptionsProvider.kt  EncodingService.kt  HttpClientHandler.java  HttpServer.kt  HttpStreamingService.kt  MainActivity.kt  Mp4Muxer.kt  PictureStreamer.kt  TextureRenderer.kt  Utils.kt
app/src/main/java/fi/iki/elonen/: NanoHTTPD.java
app/src/main/jni/ffmpeg/: CMakeLists.txt  Mp4Muxer.c
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/videotest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
